--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=larabbs
+DB_DATABASE=blog_api
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -42,3 +42,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+QCLOUD_SMS_APP_ID=1400333358
+QCLOUD_SMS_APP_KEY=053d8c05e68b01cc9130a4c02b74e8d5
