--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "gregwar/captcha": "^1.1",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "overtrue/easy-sms": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
