--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "gregwar/captcha": "^1.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "overtrue/easy-sms": "^1.1"
+        "overtrue/easy-sms": "^1.1",
+        "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
