--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=bbs
 APP_ENV=local
 APP_KEY=base64:/vEO2bgg5b6zCNxjVURzzHe6zgwU0Hj9hM144wp1Nhs=
 APP_DEBUG=true
-APP_URL=http://larabbs.test
+APP_URL=http://blogapi.test
 
 LOG_CHANNEL=stack
 
