--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "barryvdh/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
         "gregwar/captcha": "^1.1",
         "intervention/image": "^2.5",
