--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "overtrue/easy-sms": "^1.1",
         "overtrue/laravel-lang": "~3.0",
+        "spatie/laravel-query-builder": "^2.8",
         "tymon/jwt-auth": "1.0.0-rc.5"
     },
     "require-dev": {
